<resources>
    <string name="app_name">KotlinQuizApplication</string>
    <string name="quiz_app">Quiz App</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="_0_10">0 / 10</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations</string>
    <string name="username">Username</string>
    <string name="finish">Finish</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="image">image</string>
</resources>