<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/ic_bg"
    tools:context=".ResultActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_trophy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUsername"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScore"
        android:textSize="16sp"
        android:textColor="@android:color/secondary_text_dark"
        android:gravity="center"
        android:text="@string/your_score_is_9_out_of_10"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFinish"
        android:text="@string/finish"/>



</LinearLayout>